--- a/Aula_01_Introdução_ao_Python.ipynb
+++ b/Aula_01_Introdução_ao_Python.ipynb
@@ -117,7 +117,64 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "#7. Converta uma temperatura digitada em Celsius para Fahrenheit. F = 9*C/5 + 32 . Faça agora o contrário, de Fahrenheit para Celsius.\n",
+        "\n",
+        "\n",
+        "celsius = float(input(\"Insira a temperatura em Celsius:\"))\n",
+        "\n",
+        "print(\"A temperatura em Fahrenheit é:\", 9 * celsius / 5 + 32)\n",
+        "\n",
+        "fahrenheit = float(input(\"Insira a temperatura em Fahrenheit:\"))\n",
+        "\n",
+        "print(\"A temperatura em Celsius é:\", (fahrenheit - 32) * 5 / 9)\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#8. Escreva um programa que pergunte a quantidade de km percorridos por um carro alugado pelo usuário, assim como a quantidade de dias pelos quais o carro foi alugado. Calcule o preço a pagar, sabendo que o carro custa R$ 60,00 por dia e R$ 0,15 por km rodado.\n",
+        "\n",
+        "km = float(input(\"Insira a quantidade de km percorridos:\"))\n",
+        "dias = int(input(\"Insira a quantidade de dias:\"))\n",
+        "\n",
+        "print(\"O preço a pagar é:\", 60 * dias + 0.15 * km)\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#9. Escreva um programa para calcular a redução do tempo de vida de um fumante. Pergunte a quantidade de cigarros fumados por dia e quantos anos ele já fumou. Considere que um fumante perde 10 minutos de vida a cada cigarro, calcule quantos dias de vida um fumante perderá. Exiba o total de dias.\n",
+        "\n",
+        "cigarros = int(input(\"Insira a quantidade de cigarros fumados por dia:\"))\n",
+        "anos = int(input(\"Insira a quantidade de anos fumados:\"))\n",
+        "\n",
+        "print(\"O total de dias perdidos é:\", 10 * 60 * cigarros * 365 * anos / 86400)\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#10. Sabendo que str( ) converte valores numéricos para string, calcule quantos dígitos há em 2 elevado a um milhão.\n",
+        "\n",
+        "print(\"A quantidade de dígitos é:\", len(str(2 ** 1000000)))\n",
+        "\n",
+        "\n",
+        "\n"
+      ]
     }
   ],
   "metadata": {
