Estutura de decisao

--- a/Aula 02 - Estrutura de Decisão.ipynb
+++ b/Aula 02 - Estrutura de Decisão.ipynb
@@ -397,9 +397,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#18\n",
+    "#20\n",
+    "\n",
+    "valor1 = float(input(\"Digite o primeiro valor: \"))\n",
+    "valor2 = float(input(\"Digite o segundo valor: \"))\n",
+    "\n",
+    "if valor1 < valor2:\n",
+    "    print(\"Valores em ordem crescente:\", valor1, valor2)\n",
+    "else:\n",
+    "    print(\"Valores em ordem crescente:\", valor2, valor1)\n",
+    "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#21\n",
+    "\n",
+    "valor1 = float(input(\"Digite o primeiro valor: \"))\n",
+    "valor2 = float(input(\"Digite o segundo valor: \"))\n",
+    "valor3 = float(input(\"Digite o terceiro valor: \"))\n",
+    "\n",
+    "if valor1 > valor2 and valor1 > valor3:\n",
+    "    print(\"O maior valor é:\", valor1)\n",
+    "elif valor2 > valor1 and valor2 > valor3:\n",
+    "    print(\"O maior valor é:\", valor2)\n",
+    "else:\n",
+    "    print(\"O maior valor é:\", valor3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
