Estutura de decisao

--- a/Aula 02 - Estrutura de Decisão.ipynb
+++ b/Aula 02 - Estrutura de Decisão.ipynb
@@ -435,7 +435,413 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#22\n",
+    "\n",
+    "valor1 = float(input(\"Digite o primeiro valor: \"))\n",
+    "valor2 = float(input(\"Digite o segundo valor: \"))\n",
+    "valor3 = float(input(\"Digite o terceiro valor: \"))\n",
+    "\n",
+    "if valor1 > valor2 and valor1 > valor3:\n",
+    "    if valor2 > valor3:\n",
+    "        soma = valor1 + valor2\n",
+    "    else:\n",
+    "        soma = valor1 + valor3\n",
+    "elif valor2 > valor1 and valor2 > valor3:\n",
+    "    if valor1 > valor3:\n",
+    "        soma = valor2 + valor1\n",
+    "    else:\n",
+    "        soma = valor2 + valor3\n",
+    "else:\n",
+    "    if valor1 > valor2:\n",
+    "        soma = valor3 + valor1\n",
+    "    else:\n",
+    "        soma = valor3 + valor2\n",
+    "\n",
+    "print(\"A soma dos dois maiores valores é:\", soma)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#23\n",
+    "valor1 = float(input(\"Digite o primeiro valor: \"))\n",
+    "valor2 = float(input(\"Digite o segundo valor: \"))\n",
+    "valor3 = float(input(\"Digite o terceiro valor: \"))\n",
+    "\n",
+    "if valor1 >= valor2 and valor1 >= valor3:\n",
+    "    maior = valor1\n",
+    "    if valor2 >= valor3:\n",
+    "        soma = valor1 + valor2\n",
+    "    else:\n",
+    "        soma = valor1 + valor3\n",
+    "elif valor2 >= valor1 and valor2 >= valor3:\n",
+    "    maior = valor2\n",
+    "    if valor1 >= valor3:\n",
+    "        soma = valor2 + valor1\n",
+    "    else:\n",
+    "        soma = valor2 + valor3\n",
+    "else:\n",
+    "    maior = valor3\n",
+    "    if valor1 >= valor2:\n",
+    "        soma = valor3 + valor1\n",
+    "    else:\n",
+    "        soma = valor3 + valor2\n",
+    "\n",
+    "print(\"O maior valor é:\", maior)\n",
+    "print(\"A soma dos dois maiores valores é:\", soma)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#24\n",
+    "\n",
+    "nota1 = float(input(\"Digite a primeira nota: \"))\n",
+    "nota2 = float(input(\"Digite a segunda nota: \"))\n",
+    "\n",
+    "media = (nota1 + nota2) / 2\n",
+    "\n",
+    "if media >= 9.0:\n",
+    "    conceito = \"A\"\n",
+    "elif media >= 7.5:\n",
+    "    conceito = \"B\"\n",
+    "elif media >= 6.0:\n",
+    "    conceito = \"C\"\n",
+    "elif media >= 4.0:\n",
+    "    conceito = \"D\"\n",
+    "else:\n",
+    "    conceito = \"E\"\n",
+    "\n",
+    "print(\"Média final:\", media)\n",
+    "print(\"Conceito obtido:\", conceito)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#25\n",
+    "\n",
+    "valor1 = float(input(\"Digite o primeiro valor: \"))\n",
+    "valor2 = float(input(\"Digite o segundo valor: \"))\n",
+    "\n",
+    "operacao = int(input(\"Digite o número da operação a ser realizada: 1 - Adição, 2 - Subtração, 3 - Multiplicação, 4 - Divisão\"))\n",
+    "\n",
+    "if operacao == 1:\n",
+    "    resultado = valor1 + valor2\n",
+    "elif operacao == 2:\n",
+    "    resultado = valor1 - valor2\n",
+    "elif operacao == 3:\n",
+    "    resultado = valor1 * valor2\n",
+    "elif operacao == 4:\n",
+    "    resultado = valor1 / valor2\n",
+    "else:\n",
+    "    print(\"Operação inválida!\")\n",
+    "    resultado = None\n",
+    "\n",
+    "if resultado is not None:\n",
+    "    print(\"Resultado:\", resultado)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#26\n",
+    "\n",
+    "import math\n",
+    "\n",
+    "a = float(input(\"Digite o valor de a: \"))\n",
+    "b = float(input(\"Digite o valor de b: \"))\n",
+    "c = float(input(\"Digite o valor de c: \"))\n",
+    "\n",
+    "delta = b**2 - 4*a*c\n",
+    "\n",
+    "if delta < 0:\n",
+    "    print(\"A equação não possui raízes reais.\")\n",
+    "elif delta == 0:\n",
+    "    raiz = -b / (2*a)\n",
+    "    print(\"A equação possui uma raiz real:\", raiz)\n",
+    "else:\n",
+    "    raiz1 = (-b + math.sqrt(delta)) / (2*a)\n",
+    "    raiz2 = (-b - math.sqrt(delta)) / (2*a)\n",
+    "    print(\"A equação possui duas raízes reais:\", raiz1, \"e\", raiz2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#27\n",
+    "\n",
+    "a = float(input(\"Digite o primeiro lado do triângulo: \"))\n",
+    "b = float(input(\"Digite o segundo lado do triângulo: \"))\n",
+    "c = float(input(\"Digite o terceiro lado do triângulo: \"))\n",
+    "\n",
+    "if a < b + c and b < a + c and c < a + b:\n",
+    "    if a == b and b == c:\n",
+    "        print(\"Os lados formam um triângulo equilátero\")\n",
+    "    elif a == b or a == c or b == c:\n",
+    "        print(\"Os lados formam um triângulo isósceles\")\n",
+    "    else:\n",
+    "        print(\"Os lados formam um triângulo escaleno\")\n",
+    "else:\n",
+    "    print(\"Os valores lidos não formam um triângulo\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#28\n",
+    "\n",
+    "opcao = int(input(\"Digite a opção desejada (1 - ordem crescente, 2 - ordem decrescente, 3 - maior valor no meio): \"))\n",
+    "a = float(input(\"Digite o primeiro valor: \"))\n",
+    "b = float(input(\"Digite o segundo valor: \"))\n",
+    "c = float(input(\"Digite o terceiro valor: \"))\n",
+    "\n",
+    "if opcao == 1:\n",
+    "    valores_ordenados = sorted([a, b, c])\n",
+    "    print(\"Valores em ordem crescente:\", valores_ordenados)\n",
+    "elif opcao == 2:\n",
+    "    valores_ordenados = sorted([a, b, c], reverse=True)\n",
+    "    print(\"Valores em ordem decrescente:\", valores_ordenados)\n",
+    "elif opcao == 3:\n",
+    "    if a > b and a > c:\n",
+    "        if b > c:\n",
+    "            print(\"Valores em ordem:\", c, a, b)\n",
+    "        else:\n",
+    "            print(\"Valores em ordem:\", b, a, c)\n",
+    "    elif b > a and b > c:\n",
+    "        if a > c:\n",
+    "            print(\"Valores em ordem:\", c, b, a)\n",
+    "        else:\n",
+    "            print(\"Valores em ordem:\", a, b, c)\n",
+    "    else:\n",
+    "        if a > b:\n",
+    "            print(\"Valores em ordem:\", b, c, a)\n",
+    "        else:\n",
+    "            print(\"Valores em ordem:\", a, c, b)\n",
+    "else:\n",
+    "    print(\"Opção inválida. Por favor, escolha uma opção válida (1, 2 ou 3).\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#29\n",
+    "\n",
+    "salario = float(input(\"Digite o salário atual do funcionário: \"))\n",
+    "\n",
+    "if salario <= 400.00:\n",
+    "    indice = 0.15\n",
+    "elif salario <= 700.00:\n",
+    "    indice = 0.12\n",
+    "elif salario <= 1000.00:\n",
+    "    indice = 0.10\n",
+    "elif salario <= 1500.00:\n",
+    "    indice = 0.07\n",
+    "elif salario <= 2000.00:\n",
+    "    indice = 0.04\n",
+    "else:\n",
+    "    indice = 0.0\n",
+    "\n",
+    "if indice > 0.0:\n",
+    "    aumento = salario * indice\n",
+    "    novo_salario = salario + aumento\n",
+    "    print(\"O índice de aumento é de {:.0%}.\".format(indice))\n",
+    "    print(\"O valor do aumento é de R$ {:.2f}.\".format(aumento))\n",
+    "    print(\"O novo salário é de R$ {:.2f}.\".format(novo_salario))\n",
+    "else:\n",
+    "    print(\"Não houve aumento de salário.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#30\n",
+    "\n",
+    "salario_atual = float(input(\"Digite o salário atual do funcionário: \"))\n",
+    "\n",
+    "if salario_atual < 10000:\n",
+    "  reajuste = 0.55\n",
+    "elif salario_atual <= 25000:\n",
+    "  reajuste = 0.20\n",
+    "else:\n",
+    "  reajuste = 0.15\n",
+    "\n",
+    "novo_salario = salario_atual * (1 + reajuste)\n",
+    "\n",
+    "print(f\"O novo salário é de R${novo_salario:.2f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#31\n",
+    "\n",
+    "temperatura = int(input(\"Digite a temperatura desejada (em graus Celsius): \"))\n",
+    "\n",
+    "if temperatura <= 500:\n",
+    "    print(\"Temperatura Inválida\")\n",
+    "elif temperatura < 700:\n",
+    "    print(\"Aquecimento Ligado em 100%\")\n",
+    "elif temperatura < 735:\n",
+    "    print(\"Aquecimento Ligado em 50%\")\n",
+    "elif temperatura < 1000:\n",
+    "    print(\"Aquecimento Ligado em 25%\")\n",
+    "else:\n",
+    "    print(\"Superaquecimento\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#32\n",
+    "\n",
+    "# leitura do valor de operação\n",
+    "operacao = int(input(\"Digite um valor de 0 a 4: \"))\n",
+    "\n",
+    "# leitura dos valores a e b\n",
+    "a = float(input(\"Digite o primeiro valor: \"))\n",
+    "b = float(input(\"Digite o segundo valor: \"))\n",
+    "\n",
+    "# verificação da operação a ser realizada\n",
+    "if operacao == 0:\n",
+    "    resultado = a + b\n",
+    "    print(\"A soma dos valores é:\", resultado)\n",
+    "elif operacao == 1:\n",
+    "    resultado = a - b\n",
+    "    print(\"A subtração dos valores é:\", resultado)\n",
+    "elif operacao == 2:\n",
+    "    resultado = a * b\n",
+    "    print(\"A multiplicação dos valores é:\", resultado)\n",
+    "elif operacao == 3:\n",
+    "    if b == 0:\n",
+    "        print(\"Erro: divisão por zero\")\n",
+    "    else:\n",
+    "        resultado = a / b\n",
+    "        print(\"A divisão dos valores é:\", resultado)\n",
+    "elif operacao == 4:\n",
+    "    resultado = (a + b) / 2\n",
+    "    print(\"A média dos valores é:\", resultado)\n",
+    "else:\n",
+    "    print(\"Valor errado. Programa encerrado sem cálculos\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#33\n",
+    "\n",
+    "# Lendo os valores inteiros\n",
+    "num1 = int(input(\"Digite o primeiro número: \"))\n",
+    "num2 = int(input(\"Digite o segundo número: \"))\n",
+    "\n",
+    "# Verificando o resto da divisão\n",
+    "resto_div = num1 % num2\n",
+    "\n",
+    "if resto_div == 1:\n",
+    "    # Caso o resto da divisão seja 1\n",
+    "    soma_resto = num1 + num2 + resto_div\n",
+    "    print(f\"A soma dos números mais o resto da divisão é {soma_resto}\")\n",
+    "    \n",
+    "elif resto_div == 2:\n",
+    "    # Caso o resto da divisão seja 2\n",
+    "    par_impar_num1 = \"par\" if num1 % 2 == 0 else \"ímpar\"\n",
+    "    par_impar_num2 = \"par\" if num2 % 2 == 0 else \"ímpar\"\n",
+    "    print(f\"O primeiro número é {par_impar_num1} e o segundo número é {par_impar_num2}\")\n",
+    "    \n",
+    "elif resto_div == 3:\n",
+    "    # Caso o resto da divisão seja 3\n",
+    "    mult_soma = (num1 + num2) * num1\n",
+    "    print(f\"O produto da soma dos números pelo primeiro é {mult_soma}\")\n",
+    "    \n",
+    "elif resto_div == 4:\n",
+    "    if num2 != 0:\n",
+    "        div_soma = (num1 + num2) / num2\n",
+    "        print(f\"A divisão da soma dos números pelo segundo é {div_soma}\")\n",
+    "    else:\n",
+    "        print(\"Não é possível dividir por zero\")\n",
+    "        \n",
+    "else:\n",
+    "    quadrado_num1 = num1 ** 2\n",
+    "    quadrado_num2 = num2 ** 2\n",
+    "    print(f\"O quadrado do primeiro número é {quadrado_num1} e o quadrado\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#34\n",
+    "\n",
+    "idade_h1 = int(input(\"Digite a idade do primeiro homem: \"))\n",
+    "idade_h2 = int(input(\"Digite a idade do segundo homem: \"))\n",
+    "idade_m1 = int(input(\"Digite a idade da primeira mulher: \"))\n",
+    "idade_m2 = int(input(\"Digite a idade da segunda mulher: \"))\n",
+    "\n",
+    "soma = max(idade_h1, idade_h2) + min(idade_m1, idade_m2)\n",
+    "produto = min(idade_h1, idade_h2) * max(idade_m1, idade_m2)\n",
+    "\n",
+    "print(\"A soma das idades do homem mais velho com a mulher mais nova é\", soma)\n",
+    "print(\"O produto das idades do homem mais novo com a mulher mais velha é\", produto)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#35\n",
+    "num = int(input(\"Digite um número de 4 dígitos: \"))\n",
+    "\n",
+    "parte1 = num // 100\n",
+    "parte2 = num % 100\n",
+    "\n",
+    "soma = parte1 + parte2\n",
+    "quadrado = soma ** 2\n",
+    "\n",
+    "if quadrado == num:\n",
+    "    print(\"O número\", num, \"obedece à característica.\")\n",
+    "else:\n",
+    "    print(\"O número\", num, \"não obedece à característica.\")\n"
+   ]
   }
  ],
  "metadata": {
