seila nao sei mais

--- a/Aula 03 - Estruturas de Repetição.ipynb
+++ b/Aula 03 - Estruturas de Repetição.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -198,17 +198,40 @@
     "\n",
     "\n",
     "\n",
-    "atletas = []\n",
+    "n = int(input(\"Digite a quantidade de atletas: \"))\n",
     "\n",
-    "for atletas in range(20):\n",
-    "    inscricao, altura = input(\"Digite a inscrição\"), input(\"Digite a altura\")\n",
-    "    atletas.append({inscricao:altura})\n",
+    "# Inicialize as variáveis para armazenar o atleta mais alto e mais baixo\n",
+    "mais_alto = 0\n",
+    "mais_baixo = float('inf')\n",
     "\n",
+    "soma_alturas = 0\n",
     "\n",
-    "for atleta in atletas:\n",
-    "    print(f'O atleta {atleta[0]} tem {atleta[1]} de altura')\n",
+    "for i in range(n):\n",
+    "    numero_inscricao = int(input(\"Digite o número de inscrição do atleta: \"))\n",
+    "    altura = float(input(\"Digite a altura do atleta em centímetros: \"))\n",
     "\n",
-    "    \n"
+    "    soma_alturas += altura\n",
+    "\n",
+    "    if altura > mais_alto:\n",
+    "        mais_alto = altura\n",
+    "        inscricao_alto = numero_inscricao\n",
+    "\n",
+    "    if altura < mais_baixo:\n",
+    "        mais_baixo = altura\n",
+    "        inscricao_baixo = numero_inscricao\n",
+    "\n",
+    "media_alturas = soma_alturas / n\n",
+    "\n",
+    "# Imprima os resultados\n",
+    "print(\"Atleta mais alto:\")\n",
+    "print(\"Número de inscrição:\", inscricao_alto)\n",
+    "print(\"Altura:\", mais_alto)\n",
+    "\n",
+    "print(\"\\nAtleta mais baixo:\")\n",
+    "print(\"Número de inscrição:\", inscricao_baixo)\n",
+    "print(\"Altura:\", mais_baixo)\n",
+    "\n",
+    "print(\"\\nAltura média do grupo de atletas:\", media_alturas)\n"
    ]
   },
   {
@@ -216,7 +239,152 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#9\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mA execução de células com '/usr/bin/python3' requer o pacote ipykernel.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '/usr/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
+   "source": [
+    "#10\n",
+    "\n",
+    "n = int(input(\"Digite um número inteiro positivo: \"))\n",
+    "fatorial = 1\n",
+    "\n",
+    "if n < 0:\n",
+    "    print(\"O fatorial não está definido para números negativos.\")\n",
+    "elif n == 0:\n",
+    "    print(\"O fatorial de 0 é 1.\")\n",
+    "else:\n",
+    "    for i in range(1, n + 1):\n",
+    "        fatorial *= i\n",
+    "\n",
+    "    print(\"O fatorial de\", n, \"é\", fatorial)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#11\n",
+    "\n",
+    "soma = 0\n",
+    "\n",
+    "\n",
+    "for num in range(1,101):\n",
+    "    soma += num"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#12\n",
+    "soma = 0\n",
+    "\n",
+    "\n",
+    "for num in range(1,101):\n",
+    "    soma += 1/num"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#17\n",
+    "\n",
+    "casas = int(input(\"Digite o número de casas visitadas: \"))\n",
+    "\n",
+    "espectadores = {\n",
+    "    4: 0,\n",
+    "    5: 0,\n",
+    "    9: 0,\n",
+    "    12: 0\n",
+    "}\n",
+    "\n",
+    "total_espectadores = 0\n",
+    "\n",
+    "# Coleta dos dados de audiência\n",
+    "for i in range(casas):\n",
+    "    canal = int(input(\"Digite o número do canal da casa visitada (4, 5, 9, 12): \"))\n",
+    "    num_espectadores = int(input(\"Digite o número de pessoas assistindo: \"))\n",
+    "\n",
+    "    espectadores[canal] += num_espectadores\n",
+    "\n",
+    "    total_espectadores += num_espectadores\n",
+    "\n",
+    "print(\"\\nPercentual de Audiência por Canal:\")\n",
+    "\n",
+    "for canal, num_espectadores in espectadores.items():\n",
+    "    percentual = (num_espectadores / total_espectadores) * 100\n",
+    "    print(\"Canal\", canal, \"- Percentual de Audiência:\", percentual, \"%\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 18\n",
+    "\n",
+    "despesas = 200.00\n",
+    "\n",
+    "lucro_maximo = 0.0\n",
+    "preco_ingresso_lucro_maximo = 0.0\n",
+    "num_ingressos_lucro_maximo = 0\n",
+    "\n",
+    "print(\"Preço do Ingresso | Número de Ingressos | Lucro Esperado\")\n",
+    "\n",
+    "for preco_ingresso in [5.00, 4.50, 4.00, 3.50, 3.00, 2.50, 2.00, 1.50, 1.00]:\n",
+    "    aumento_ingressos = int((preco_ingresso - 5.00) / 0.50) * 26\n",
+    "    num_ingressos = 120 + aumento_ingressos\n",
+    "\n",
+    "    total_arrecadado = num_ingressos * preco_ingresso\n",
+    "    lucro_esperado = total_arrecadado - despesas\n",
+    "\n",
+    "    if lucro_esperado > lucro_maximo:\n",
+    "        lucro_maximo = lucro_esperado\n",
+    "        preco_ingresso_lucro_maximo = preco_ingresso\n",
+    "        num_ingressos_lucro_maximo = num_ingressos\n",
+    "\n",
+    "    print(f\"R$ {preco_ingresso:,.2f}              | {num_ingressos:<18} | R$ {lucro_esperado:,.2f}\")\n",
+    "\n",
+    "print(\"\\nLucro Máximo Esperado:\")\n",
+    "print(f\"Preço do Ingresso: R$ {preco_ingresso_lucro_maximo:,.2f}\")\n",
+    "print(\"Número de Ingressos:\", num_ingressos_lucro_maximo)\n",
+    "print(f\"Lucro Esperado: R$ {lucro_maximo:,.2f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 19"
+   ]
   }
  ],
  "metadata": {
@@ -235,7 +403,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4
  },
