--- a/Aula 03 - Estruturas de Repetição.ipynb
+++ b/Aula 03 - Estruturas de Repetição.ipynb
@@ -383,7 +383,395 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 19"
+    "# 19\n",
+    "\n",
+    "n = int(input(\"Digite a quantidade de números a serem lidos: \"))\n",
+    "\n",
+    "for i in range(n):\n",
+    "    numero = int(input(\"Digite um número inteiro: \"))\n",
+    "    divisores = []\n",
+    "    \n",
+    "    # Verifica todos os possíveis divisores do número\n",
+    "    for j in range(1, numero + 1):\n",
+    "        if numero % j == 0:\n",
+    "            divisores.append(j)\n",
+    "    \n",
+    "    # Imprime os divisores e a quantidade de divisores\n",
+    "    print(f\"Número lido: {numero}\")\n",
+    "    print(\"Divisores:\", divisores)\n",
+    "    print(\"Quantidade de divisores:\", len(divisores))\n",
+    "    print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#20\n",
+    "\n",
+    "dias = int(input(\"Digite a quantidade de dias: \"))\n",
+    "\n",
+    "for dia in range(1, dias + 1):\n",
+    "    quebrados = 0\n",
+    "    \n",
+    "    for hora in range(1, 17):\n",
+    "        quantidade_quebrados = 3 ** (hora - 1)\n",
+    "        quebrados += quantidade_quebrados\n",
+    "    \n",
+    "    print(f\"No final do dia {dia}, foram quebrados {quebrados} biscoitos.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#21\n",
+    "\n",
+    "quantidade_alunos = 50\n",
+    "alunos_18_anos = []\n",
+    "quantidade_alunos_acima_20 = 0\n",
+    "\n",
+    "for i in range(1, quantidade_alunos + 1):\n",
+    "    nome = input(f\"Digite o nome do aluno {i}: \")\n",
+    "    idade = int(input(f\"Digite a idade do aluno {i}: \"))\n",
+    "\n",
+    "    if idade == 18:\n",
+    "        alunos_18_anos.append(nome)\n",
+    "\n",
+    "    if idade > 20:\n",
+    "        quantidade_alunos_acima_20 += 1\n",
+    "\n",
+    "print(\"Alunos com 18 anos:\")\n",
+    "for aluno in alunos_18_anos:\n",
+    "    print(aluno)\n",
+    "\n",
+    "print(f\"Quantidade de alunos com idade acima de 20 anos: {quantidade_alunos_acima_20}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#22\n",
+    "\n",
+    "n = int(input(\"Digite a quantidade de pessoas: \"))\n",
+    "soma_altura_mulheres = 0\n",
+    "soma_altura_turma = 0\n",
+    "quantidade_mulheres = 0\n",
+    "\n",
+    "for i in range(1, n + 1):\n",
+    "    altura = float(input(f\"Digite a altura da pessoa {i} (em metros): \"))\n",
+    "    sexo = input(f\"Digite o sexo da pessoa {i} (M/F): \")\n",
+    "\n",
+    "    if sexo.lower() == 'f':\n",
+    "        soma_altura_mulheres += altura\n",
+    "        quantidade_mulheres += 1\n",
+    "    \n",
+    "    soma_altura_turma += altura\n",
+    "\n",
+    "media_altura_mulheres = soma_altura_mulheres / quantidade_mulheres\n",
+    "media_altura_turma = soma_altura_turma / n\n",
+    "\n",
+    "print(f\"Média da altura das mulheres: {media_altura_mulheres:.2f} metros\")\n",
+    "print(f\"Média da altura da turma: {media_altura_turma:.2f} metros\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#23\n",
+    "\n",
+    "while True:\n",
+    "    nome = input(\"Digite o nome do cliente (ou 'ULTIMO' para sair): \")\n",
+    "    \n",
+    "    if nome == \"ULTIMO\":\n",
+    "        break\n",
+    "\n",
+    "    endereco = input(\"Digite o endereço do cliente: \")\n",
+    "    valor_compra = float(input(\"Digite o valor da compra: \"))\n",
+    "\n",
+    "    if valor_compra > 500.0:\n",
+    "        desconto = 0.2\n",
+    "    else:\n",
+    "        desconto = 0.15\n",
+    "\n",
+    "    total_pagar = valor_compra - (valor_compra * desconto)\n",
+    "\n",
+    "    print(f\"Cliente: {nome}\")\n",
+    "    print(f\"Endereço: {endereco}\")\n",
+    "    print(f\"Total a pagar: R$ {total_pagar:.2f}\")\n",
+    " \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#24\n",
+    "\n",
+    "idades = []\n",
+    "deseja_digitar = 's'\n",
+    "\n",
+    "while deseja_digitar.lower() == 's':\n",
+    "    idade = int(input(\"Digite a idade da pessoa: \"))\n",
+    "\n",
+    "    if idade > 0:\n",
+    "        idades.append(idade)\n",
+    "    \n",
+    "    deseja_digitar = input(\"Deseja digitar mais um valor? (s/n): \")\n",
+    "\n",
+    "if len(idades) > 0:\n",
+    "    media_idades = sum(idades) / len(idades)\n",
+    "    print(f\"A idade média do grupo de pessoas é: {media_idades:.2f}\")\n",
+    "else:\n",
+    "    print(\"Nenhum valor válido foi digitado.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==== Menu ====\n",
+      "1. Encerrar conta de um hóspede\n",
+      "2. Verificar número de contas encerradas\n",
+      "3. Finalizar execução\n",
+      "Nome do hóspede: 1\n",
+      "Total a ser pago: R$ 690.00\n",
+      "==== Menu ====\n",
+      "1. Encerrar conta de um hóspede\n",
+      "2. Verificar número de contas encerradas\n",
+      "3. Finalizar execução\n",
+      "Programa encerrado.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#25\n",
+    "\n",
+    "contas_encerradas = 0\n",
+    "\n",
+    "while True:\n",
+    "    print(\"==== Menu ====\")\n",
+    "    print(\"1. Encerrar conta de um hóspede\")\n",
+    "    print(\"2. Verificar número de contas encerradas\")\n",
+    "    print(\"3. Finalizar execução\")\n",
+    "\n",
+    "    opcao = int(input(\"Escolha uma opção: \"))\n",
+    "\n",
+    "    if opcao == 1:\n",
+    "        nome = input(\"Digite o nome do hóspede: \")\n",
+    "        diarias = int(input(\"Digite o número de diárias: \"))\n",
+    "\n",
+    "        if diarias < 15:\n",
+    "            taxa_servicos = 7.50\n",
+    "        elif diarias == 15:\n",
+    "            taxa_servicos = 6.50\n",
+    "        else:\n",
+    "            taxa_servicos = 5.00\n",
+    "\n",
+    "        total_pagar = (50.00 * diarias) + (taxa_servicos * diarias)\n",
+    "\n",
+    "        print(f\"Nome do hóspede: {nome}\")\n",
+    "        print(f\"Total a ser pago: R$ {total_pagar:.2f}\")\n",
+    "        contas_encerradas += 1\n",
+    "\n",
+    "    elif opcao == 2:\n",
+    "        print(f\"Número de contas encerradas: {contas_encerradas}\")\n",
+    "\n",
+    "    elif opcao == 3:\n",
+    "        print(\"Programa encerrado.\")\n",
+    "        break\n",
+    "\n",
+    "    else:\n",
+    "        print(\"Opção inválida. Por favor, escolha uma opção válida.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#26\n",
+    "\n",
+    "\n",
+    "massa_inicial = float(input(\"Digite a massa inicial em kg: \"))\n",
+    "\n",
+    "massa_final = massa_inicial\n",
+    "tempo = 0\n",
+    "\n",
+    "while massa_final >= 0.0005:  # 0,5 gramas em kg\n",
+    "    massa_final /= 2\n",
+    "    tempo += 50  # segundos\n",
+    "\n",
+    "print(\"Resultado:\")\n",
+    "print(\"Massa inicial:\", massa_inicial, \"kg\")\n",
+    "print(\"Massa final:\", massa_final, \"kg\")\n",
+    "print(\"Tempo necessário:\", tempo, \"segundos\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#27\n",
+    "\n",
+    "numero_reabastecimentos = int(input(\"Digite o número total de reabastecimentos feitos: \"))\n",
+    "\n",
+    "quilometragem_total = 0\n",
+    "combustivel_total = 0\n",
+    "\n",
+    "for i in range(numero_reabastecimentos):\n",
+    "    odometro = float(input(f\"Digite a leitura do odômetro na parada {i+1}: \"))\n",
+    "    combustivel = float(input(f\"Digite a quantidade de combustível comprado na parada {i+1}: \"))\n",
+    "\n",
+    "    if i == 0:  \n",
+    "        quilometragem_anterior = odometro\n",
+    "        combustivel_anterior = combustivel\n",
+    "    else:\n",
+    "        quilometragem_percorrida = odometro - quilometragem_anterior\n",
+    "        quilometragem_por_litro = quilometragem_percorrida / combustivel_anterior\n",
+    "\n",
+    "        print(f\"Quilometragem obtida por litro entre as paradas {i} e {i+1}: {quilometragem_por_litro:.2f} km/L\")\n",
+    "\n",
+    "        quilometragem_total += quilometragem_percorrida\n",
+    "        combustivel_total += combustivel_anterior\n",
+    "\n",
+    "        quilometragem_anterior = odometro\n",
+    "        combustivel_anterior = combustivel\n",
+    "\n",
+    "quilometragem_media = quilometragem_total / combustivel_total\n",
+    "\n",
+    "print(\"Resultado:\")\n",
+    "print(f\"Quilometragem média obtida por litro de combustível em toda a viagem: {quilometragem_media:.2f} km/L\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#28\n",
+    "\n",
+    "pontos_jogador_direito = 0\n",
+    "pontos_jogador_esquerdo = 0\n",
+    "\n",
+    "while True:\n",
+    "    codigo_ponto = input(\"Digite o código do ponto (D/E): \")\n",
+    "\n",
+    "    if codigo_ponto == 'D':\n",
+    "        pontos_jogador_direito += 1\n",
+    "    elif codigo_ponto == 'E':\n",
+    "        pontos_jogador_esquerdo += 1\n",
+    "\n",
+    "    if pontos_jogador_direito >= 21 and abs(pontos_jogador_direito - pontos_jogador_esquerdo) >= 2:\n",
+    "        vencedor = \"Jogador Direito\"\n",
+    "        break\n",
+    "    elif pontos_jogador_esquerdo >= 21 and abs(pontos_jogador_esquerdo - pontos_jogador_direito) >= 2:\n",
+    "        vencedor = \"Jogador Esquerdo\"\n",
+    "        break\n",
+    "\n",
+    "print(\"Resultado:\")\n",
+    "print(\"Vencedor:\", vencedor)\n",
+    "print(\"Pontos do Jogador Direito:\", pontos_jogador_direito)\n",
+    "print(\"Pontos do Jogador Esquerdo:\", pontos_jogador_esquerdo)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#29\n",
+    "\n",
+    "limite_diario = float(input(\"Digite o limite diário de peso de pesca (em kg): \"))\n",
+    "peso_total = 0\n",
+    "\n",
+    "while True:\n",
+    "    peso_peixe = float(input(\"Digite o peso do peixe (em gramas): \"))\n",
+    "    peso_total += peso_peixe / 1000  # Converter o peso do peixe para quilogramas\n",
+    "\n",
+    "    if peso_total > limite_diario:\n",
+    "        print(\"Limite diário de peso de pesca excedido!\")\n",
+    "        break\n",
+    "\n",
+    "    continuar = input(\"Informar o peso de mais um peixe? (s/n): \")\n",
+    "    if continuar.lower() != 's':\n",
+    "        break\n",
+    "\n",
+    "print(\"Peso total da pesca:\", peso_total, \"kg\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#30\n",
+    "\n",
+    "preco_residencial = float(input(\"Digite o preço do kWh para consumidores residenciais: \"))\n",
+    "preco_comercial = float(input(\"Digite o preço do kWh para consumidores comerciais: \"))\n",
+    "preco_industrial = float(input(\"Digite o preço do kWh para consumidores industriais: \"))\n",
+    "\n",
+    "total_kwh_residencial = 0\n",
+    "total_kwh_comercial = 0\n",
+    "total_kwh_industrial = 0\n",
+    "\n",
+    "total_a_pagar = 0\n",
+    "total_consumo = 0\n",
+    "contador_consumidores = 0\n",
+    "\n",
+    "while True:\n",
+    "    numero_identificacao = input(\"Digite o número de identificação do consumidor (ou 'sair' para encerrar): \")\n",
+    "    if numero_identificacao.lower() == 'sair':\n",
+    "        break\n",
+    "\n",
+    "    consumo_kwh = float(input(\"Digite a quantidade de kWh consumidos durante o mês: \"))\n",
+    "    tipo_consumidor = input(\"Digite o código do tipo de consumidor (R - residencial, C - comercial, I - industrial): \")\n",
+    "\n",
+    "    if tipo_consumidor.lower() == 'r':\n",
+    "        total_a_pagar = consumo_kwh * preco_residencial\n",
+    "        total_kwh_residencial += consumo_kwh\n",
+    "    elif tipo_consumidor.lower() == 'c':\n",
+    "        total_a_pagar = consumo_kwh * preco_comercial\n",
+    "        total_kwh_comercial += consumo_kwh\n",
+    "    elif tipo_consumidor.lower() == 'i':\n",
+    "        total_a_pagar = consumo_kwh * preco_industrial\n",
+    "        total_kwh_industrial += consumo_kwh\n",
+    "\n",
+    "    total_consumo += consumo_kwh\n",
+    "    contador_consumidores += 1\n",
+    "\n",
+    "    print(\"Número de identificação do consumidor:\", numero_identificacao)\n",
+    "    print(\"Total a pagar:\", total_a_pagar)\n",
+    "\n",
+    "quantidade_media_geral = total_consumo / contador_consumidores\n",
+    "\n",
+    "print(\"Quantidade total de kWh consumida por consumidores residenciais:\", total_kwh_residencial)\n",
+    "print(\"Quantidade total de kWh consumida por consumidores comerciais:\", total_kwh_comercial)\n",
+    "print(\"Quantidade total de kWh consumida por consumidores industriais:\", total_kwh_industrial)\n",
+    "print(\"Quantidade média geral de consumo:\", quantidade_media_geral)\n"
    ]
   }
  ],
